--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
 	<title>::Web Design::</title>
 	<link rel="icon" type="favicon" href="image/reactjs.svg">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<meta name="viewport", content="width=device-width, initial-scale=1" />
 
 </head>
 <body>
-	<article class="child">
-		<h1> A</h1>
-		<h1> B</h1>
-	</article>
+	<section class="parent">
+		<article class="child">
+			<img src="image/user.svg" class="profile">
+
+			<h2>Sruti Sanjana</h2>
+			<h4><em>Assistant Professor</em></h4>
+			<a href="mailto: arunasatti@gmail.com"><img src="image/mail.svg" class="contact"></a>
+			<a href="tel: +91 9949859739"><img src="image/smartphone.svg" class="contact"></a>
+			<a href="https://www.linkedin.com/in/aruna-satti-0704859b/" target="_blank"> <img src="image/linkedin.svg" class="contact"></a>
+			<a href="https://github.com/ArunaSatti" target="_blank"><img src="image/github.svg" class="contact"></a>
+		</article>
+	</section>
 </body>
 </html>
